projects/vb6parse/snapshots/parsers/cst/edge_cases/keyword_identifiers/keyword_as_variable_in_assignment.snap
---
source: projects/vb6parse/tests/edge_cases/keyword_identifiers.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: TextKeyword
              text: text
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"hello\""
        - kind: Newline
          text: "\n"
