projects/vb6parse/snapshots/parsers/cst/edge_cases/keyword_identifiers/multiple_keywords_as_identifiers.snap
---
source: projects/vb6parse/tests/edge_cases/keyword_identifiers.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: DatabaseKeyword
              text: database
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"mydb.mdb\""
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: TextKeyword
              text: text
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"hello\""
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: obj
            - kind: PeriodOperator
              text: "."
            - kind: BinaryKeyword
              text: binary
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BooleanLiteralExpression
          children:
            - kind: TrueKeyword
              text: "True"
        - kind: Newline
          text: "\n"
